<resources>
    <string name="app_name">Aadinath Tools</string>
    <string name="action_settings">Settings</string>
    <string name="enter_date">Date</string>
    <string name="enter_invoice_number">Invoice No.</string>
    <string name="create_invoice">Create Invoice</string>
    <string name="modify_client">Manage Client</string>
    <string name="client_name">Client Name</string>
    <string name="title_activity_client">Clients</string>
    <string name="title_invoice">Invoice</string>
    <string name="gstin">GSTIN</string>
    <string name="client_gstin">Client GSTIN</string>
    <string name="client_address">Client Address</string>
    <string name="submitClient">Add Client</string>
    <string name="submitItem">Add Item</string>
    <string name="cgst">CGST</string>
    <string name="sgst">SGST</string>
    <string name="round_off">Round Off</string>
    <string name="grand_total">Grand Total</string>
    <string name="itemDescription">Item Description</string>
    <string name="quantity">Quantity</string>
    <string name="units">Units</string>
    <string name="pcs">Pcs</string>
    <string name="rate">Rate</string>
    <string name="total">Total</string>
    <string name="hsn">HSN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="generate_bill">Generate Bill</string>
    <string name="generated_bill">Generated Bill</string>
    <string name="gstin_29abvpk9166b1z3">GSTIN : 29ABVPK9166B1Z3</string>
    <string name="tax_invoice">Tax Invoice</string>
    <string name="ph_41247554">Ph : 41247554</string>
    <string name="aadinath_desc_I">Wholesale Dealers in Johnson, Johnman, Global, Ambika, PYE, RSI,</string>
    <string name="aadinath_title">AADINATH TOOLS AND ABRASIVES</string>
    <string name="copy_detail">Original/Duplicate/Transport Copy</string>
    <string name="centrex_no_7559">Centrex No : 7559</string>
    <string name="aadinath_desc_II">Ananth, Mansarovar, Xtra Power, Addison, VTR, Trucut, Hexa Blade and All Hand Tools</string>
    <string name="aadinath_address">KUDLU COMPLEX, 2ND FLOOR, #25, KUMBARPET MAIN ROAD, BANGALORE -560002</string>
    <string name="disclaimer">Goods once sold cannot be taken back or exchanged. \n21% interest will be charged on amount over-due.</string>
    <string name="bank_details">Bank Details</string>
    <string name="bankFullDetails">Kotak Mahindra Bank \nBranch : SJP Road \nA/C No : 2112783154 \nIFSC : KKBK0008038</string>
    <string name="invoice_no">Invoice No:</string>
    <string name="dated">Dated:</string>
    <string name="s_no">S.No.</string>
    <string name="goods_desc">Description</string>
    <string name="amount">Amount</string>
    <string name="taxRate">9.00</string>
    <string name="tax_rate">Tax Rate(%)</string>
    <string name="cash_credit">Cash/Credit</string>
    <string name="cgst_sgst">CGST/SGST</string>
    <string name="gstType">GST -</string>
    <string name="igst">IGST</string>
</resources>
