<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mayajain.aadinathtools.Fragments.InvoiceDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:paddingTop="20dp"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:id="@+id/clientName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/client_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/invoiceNum"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_invoice_number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:paddingTop="20dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/date"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_date" />
    </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:id="@+id/gstType"
            android:checkedButton="@id/cgstRadio"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gstType"
                />
            <RadioButton
                android:id="@+id/cgstRadio"
                android:text="@string/cgst_sgst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/igstRadio"
                android:text="@string/igst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:paddingTop="20dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/taxRate"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/taxRate"
            android:hint="@string/tax_rate"
            android:layout_marginTop="20dp" />
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    </ScrollView>
