<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_gravity="fill_horizontal" />
    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/clientName"
        android:layout_width="match_parent"
        android:hint="@string/client_name"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/clientGSTIN"
        android:layout_width="match_parent"
        android:hint="@string/client_gstin"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/clientAddress"
        android:layout_width="match_parent"
        android:hint="@string/client_address"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:text="@string/submitClient"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content" />
</LinearLayout>