<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:orientation="vertical"
    android:padding="6dip" >

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_gravity="fill_horizontal" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/itemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/itemDescription"
        android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/hsn"
            android:inputType="number"
            android:hint="@string/hsn"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/quantity"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="numberDecimal"
        android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/units"
        android:layout_width="match_parent"
        android:hint="@string/units"
        android:paddingTop="20dp"
        android:text="@string/pcs"
        android:textSize="14sp"
        android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/rate"
            android:inputType="numberDecimal"
            android:paddingTop="20dp"
            android:hint="@string/rate"
            android:textSize="14sp"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/total"
            android:hint="@string/total"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:text="@string/submitItem"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content" />

</LinearLayout>